--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -16,9 +16,9 @@
       <a mat-menu-item (click)="navigateToModify()">Produkt bearbeiten</a>
     </mat-menu>
     <mat-menu #matMenu2>
-      <a mat-menu-item routerLink="/category/list">Kategorienübersicht</a>
-      <a mat-menu-item routerLink="/category/detail">Details</a>
-      <a mat-menu-item routerLink="/category/modify">Bearbeiten</a>
+      <a mat-menu-item routerLink="/categories/list">Kategorienübersicht</a>
+      <a mat-menu-item routerLink="/categories/create">Kategorie ersellen</a>
+      <a mat-menu-item (click)="navigateToModify()">Kategorie bearbeiten</a>
     </mat-menu>
     <mat-menu #matMenu3>
     <a mat-menu-item routerLink="/auth/login">LogIn</a>
